developing base structure

--- a/.dev/docker/config/container/nginx/include/print-db/all-050-location.conf
+++ b/.dev/docker/config/container/nginx/include/print-db/all-050-location.conf
@@ -4,12 +4,6 @@ location / {
     try_files $uri $uri/ /index.php?$query_string;
 }
 
-location ~ ^/assets/ {
-    root $root/assets/;
-
-    include include/print-db/env/whitelist.conf;
-}
-
 location ~ ^/.well-known/acme-challenge/ {
     allow all;
     root /var/www/html;
@@ -26,4 +20,16 @@ location ~ /(\.git|\.env|\.ht) {
 
 location ~ \.(ini|log|bak|conf|db|sql)$ {
     deny all;
+}
+
+location /assets/bootstrap/ {
+    include include/print-db/env/whitelist.conf;
+
+    alias $app_root/node_modules/bootstrap/dist/;
+}
+
+location /assets/bootstrap-icons/ {
+    include include/print-db/env/whitelist.conf;
+
+    alias $app_root/node_modules/bootstrap-icons/;
 }
