--- a/.dev/docker/config/container/nginx/include/print-db/env/env.conf
+++ b/.dev/docker/config/container/nginx/include/print-db/env/env.conf
@@ -1,2 +1,3 @@
-set $root /var/www/vhosts/print-db.realshade.me/public;
+set $app_root /var/www/vhosts/print-db.realshade.me;
+set $root $app_root/public;
 set $php_sock unix:/var/run/php/php8.3-fpm.sock;
