--- a/.dev/docker/config/container/php/8.3/mods-available/xdebug.ini
+++ b/.dev/docker/config/container/php/8.3/mods-available/xdebug.ini
@@ -1,7 +1,7 @@
 zend_extension=xdebug.so
 
 xdebug.mode=debug
-xdebug.client_host=127.0.0.1
+xdebug.client_host=host.docker.internal
 xdebug.client_port=9001
 xdebug.discover_client_host = 1
 #xdebug.start_with_request = no
