--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "realshade/printdb",
+    "name": "print-db",
     "private": true,
     "scripts": {
         "dev": "npm run development",
@@ -15,7 +15,7 @@
         "laravel-mix": "^6.0.49"
     },
     "dependencies": {
-        "bootstrap": "^5.1.0",
+        "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
         "jquery": "^3.7.1",
         "jquery-ui": "^1.13.3",
