додана робота з завданнями частково додана робота з частинами рефакторинг мовних файлів накидав логіку парсингу назви друкуємого файлу, котрий прийде на апі

--- a/.dev/docker/config/container/php/8.3/mods-available/xdebug.ini
+++ b/.dev/docker/config/container/php/8.3/mods-available/xdebug.ini
@@ -1,9 +1,10 @@
 zend_extension=xdebug.so
 
 xdebug.mode=debug
+#xdebug.client_host=127.0.0.1
 xdebug.client_host=host.docker.internal
-xdebug.client_port=9001
+xdebug.client_port=9002
 xdebug.discover_client_host = 1
-#xdebug.start_with_request = no
+xdebug.start_with_request = yes
 xdebug.idekey = "PHPSTORM"
 xdebug.log="/var/log/php/xdebug.log"
