--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,17 @@
-APP_NAME=Laravel
+APP_NAME=PrintDB
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://dev-print-db
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=uk
+APP_FALLBACK_LOCALE=uk
+APP_FAKER_LOCALE=uk_UA
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
+
+ASSET_URL=/assets
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -20,12 +22,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=printdbhost
+DB_PORT=3306
+DB_DATABASE=printdb
+DB_USERNAME=printdb
+DB_PASSWORD=12345678
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -37,29 +39,33 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=redis
 # CACHE_PREFIX=
 
-MEMCACHED_HOST=127.0.0.1
+# MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+# REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_DB=1
+REDIS_CACHE_DB=2
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+# MAIL_MAILER=log
+# MAIL_SCHEME=null
+# MAIL_HOST=127.0.0.1
+# MAIL_PORT=2525
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
+# MAIL_FROM_ADDRESS="hello@example.com"
+# MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+# VITE_APP_NAME="${APP_NAME}"
 
-VITE_APP_NAME="${APP_NAME}"
+### config
+
+ADMIN_EMAIL=admin@admin
+USERS_PER_PAGE=100
+
+RECAPTCHAV3_SITEKEY=
+RECAPTCHAV3_SECRET=
