--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "josiasmontag/laravel-recaptchav3": "^1.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+      "ext-xdebug": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
