--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "bootstrap-icons": "^1.11.3",
         "jquery": "^3.7.1",
         "jquery-ui": "^1.13.3",
+        "js-cookie": "^3.0.5",
         "less": "^4.2.0",
         "less-loader": "^12.2.0",
         "sweetalert2": "^11.6.13"
