--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
         "php": "^8.2",
         "josiasmontag/laravel-recaptchav3": "^1.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1",
-      "ext-xdebug": "*"
+        "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
+        "ext-xdebug": "*",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
