--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
         "dev": "npm run development",
         "development": "mix",
         "watch": "mix watch",
-        "production": "mix --production"
+        "production": "mix --production",
+        "watch-translations": "node watch-translations.js"
     },
     "devDependencies": {
         "@babel/core": "^7.24.7",
         "@babel/preset-env": "^7.24.7",
         "axios": "^1.6.4",
         "babel-loader": "^9.1.3",
+        "chokidar": "^4.0.3",
+        "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.49"
     },
     "dependencies": {
