--- a/.env.example
+++ b/.env.example
@@ -66,7 +66,7 @@ REDIS_CACHE_DB=2
 
 ADMIN_EMAIL=admin@admin
 ADMIN_PASSWORD=admin123
-USERS_PER_PAGE=100
+PAGINATION_DEFAULT=50
 FREE_REGISTRATION=false
 
 RECAPTCHAV3_SITEKEY=
