--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "laravel-mix": "^6.0.49"
     },
     "dependencies": {
+        "@simonwep/pickr": "^1.9.1",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
         "jquery": "^3.7.1",
