--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "js-cookie": "^3.0.5",
         "less": "^4.2.0",
         "less-loader": "^12.2.0",
+        "spectrum-colorpicker": "^1.8.1",
         "sweetalert2": "^11.6.13"
     }
 }
